CMSC 430 Compiler Theory and Design/Project 4/Project 4 Skeleton Code/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header variables body

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'

    3 optional_parameters: parameters
    4                    | %empty

    5 parameters: parameters ',' parameter
    6           | parameter

    7 parameter: IDENTIFIER ':' type

    8 variables: variables variable
    9          | %empty

   10 variable: IDENTIFIER ':' type IS statement_
   11         | IDENTIFIER ':' LIST OF type IS list ';'

   12 type: INTEGER
   13     | REAL
   14     | CHARACTER

   15 list: '(' expressions ')'

   16 expressions: expressions ',' expression
   17            | expression

   18 body: BEGIN_ statement_ END ';'

   19 statement_: statement ';'
   20           | error ';'

   21 statement: expression
   22          | WHEN condition ',' expression ':' expression
   23          | SWITCH expression IS cases OTHERS ARROW statement_ ENDSWITCH
   24          | IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF
   25          | FOLD direction operator list_choice ENDFOLD

   26 elsif_clauses: elsif_clauses ELSIF condition THEN statement_
   27              | %empty

   28 cases: cases case
   29      | %empty

   30 case: CASE INT_LITERAL ARROW statement_

   31 direction: LEFT
   32          | RIGHT

   33 operator: ADDOP
   34         | MULOP

   35 list_choice: list
   36            | IDENTIFIER

   37 condition: or_condition

   38 or_condition: or_condition OROP and_condition
   39             | and_condition

   40 and_condition: and_condition ANDOP not_condition
   41              | not_condition

   42 not_condition: NOTOP not_condition
   43              | relation

   44 relation: '(' condition ')'
   45         | expression RELOP expression

   46 expression: expression ADDOP term
   47           | term

   48 term: term MULOP power
   49     | term MODOP power
   50     | power

   51 power: unary EXPOP power
   52      | unary

   53 unary: NEGOP unary
   54      | primary

   55 primary: '(' expression ')'
   56        | INT_LITERAL
   57        | REAL_LITERAL
   58        | CHAR_LITERAL
   59        | IDENTIFIER '(' expression ')'
   60        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 44 55 59
    ')' (41) 15 44 55 59
    ',' (44) 5 16 22
    ':' (58) 7 10 11 22
    ';' (59) 2 11 18 19 20
    error (256) 20
    IDENTIFIER <iden> (258) 2 7 10 11 36 59 60
    INT_LITERAL <type> (259) 30 56
    REAL_LITERAL <type> (260) 57
    CHAR_LITERAL <type> (261) 58
    ADDOP (262) 33 46
    MULOP (263) 34 48
    MODOP (264) 49
    EXPOP (265) 51
    NEGOP (266) 53
    ANDOP (267) 40
    OROP (268) 38
    NOTOP (269) 42
    RELOP (270) 45
    ARROW (271) 23 30
    BEGIN_ (272) 18
    CASE (273) 30
    CHARACTER (274) 14
    ELSE (275) 24
    ELSIF (276) 26
    END (277) 18
    ENDIF (278) 24
    ENDFOLD (279) 25
    ENDSWITCH (280) 23
    FOLD (281) 25
    FUNCTION (282) 2
    IF (283) 24
    INTEGER (284) 12
    IS (285) 10 11 23
    LEFT (286) 31
    LIST (287) 11
    OF (288) 11
    OTHERS (289) 23
    REAL (290) 13
    RETURNS (291) 2
    RIGHT (292) 32
    SWITCH (293) 23
    THEN (294) 24 26
    WHEN (295) 22


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    function <type> (47)
        on left: 1
        on right: 0
    function_header (48)
        on left: 2
        on right: 1
    optional_parameters <type> (49)
        on left: 3 4
        on right: 2
    parameters <type> (50)
        on left: 5 6
        on right: 3 5
    parameter <type> (51)
        on left: 7
        on right: 5 6
    variables <type> (52)
        on left: 8 9
        on right: 1 8
    variable <type> (53)
        on left: 10 11
        on right: 8
    type <type> (54)
        on left: 12 13 14
        on right: 2 7 10 11
    list <type> (55)
        on left: 15
        on right: 11 35
    expressions <type> (56)
        on left: 16 17
        on right: 15 16
    body <type> (57)
        on left: 18
        on right: 1
    statement_ <type> (58)
        on left: 19 20
        on right: 10 18 23 24 26 30
    statement <type> (59)
        on left: 21 22 23 24 25
        on right: 19
    elsif_clauses <type> (60)
        on left: 26 27
        on right: 24 26
    cases <type> (61)
        on left: 28 29
        on right: 23 28
    case <type> (62)
        on left: 30
        on right: 28
    direction <type> (63)
        on left: 31 32
        on right: 25
    operator <type> (64)
        on left: 33 34
        on right: 25
    list_choice <type> (65)
        on left: 35 36
        on right: 25
    condition <type> (66)
        on left: 37
        on right: 22 24 26 44
    or_condition <type> (67)
        on left: 38 39
        on right: 37 38
    and_condition <type> (68)
        on left: 40 41
        on right: 38 39 40
    not_condition <type> (69)
        on left: 42 43
        on right: 40 41 42
    relation <type> (70)
        on left: 44 45
        on right: 43
    expression <type> (71)
        on left: 46 47
        on right: 16 17 21 22 23 45 46 55 59
    term <type> (72)
        on left: 48 49 50
        on right: 46 47 48 49
    power <type> (73)
        on left: 51 52
        on right: 48 49 50 51
    unary <type> (74)
        on left: 53 54
        on right: 51 52 53
    primary <type> (75)
        on left: 55 56 57 58 59 60
        on right: 54


State 0

    0 $accept: . function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION . IDENTIFIER optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function . $end

    $end  shift, and go to state 5


State 3

    1 function: function_header . variables body

    $default  reduce using rule 9 (variables)

    variables  go to state 6


State 4

    2 function_header: FUNCTION IDENTIFIER . optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 7

    $default  reduce using rule 4 (optional_parameters)

    optional_parameters  go to state 8
    parameters           go to state 9
    parameter            go to state 10


State 5

    0 $accept: function $end .

    $default  accept


State 6

    1 function: function_header variables . body
    8 variables: variables . variable

    IDENTIFIER  shift, and go to state 11
    BEGIN_      shift, and go to state 12

    variable  go to state 13
    body      go to state 14


State 7

    7 parameter: IDENTIFIER . ':' type

    ':'  shift, and go to state 15


State 8

    2 function_header: FUNCTION IDENTIFIER optional_parameters . RETURNS type ';'

    RETURNS  shift, and go to state 16


State 9

    3 optional_parameters: parameters .
    5 parameters: parameters . ',' parameter

    ','  shift, and go to state 17

    $default  reduce using rule 3 (optional_parameters)


State 10

    6 parameters: parameter .

    $default  reduce using rule 6 (parameters)


State 11

   10 variable: IDENTIFIER . ':' type IS statement_
   11         | IDENTIFIER . ':' LIST OF type IS list ';'

    ':'  shift, and go to state 18


State 12

   18 body: BEGIN_ . statement_ END ';'

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 30
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 13

    8 variables: variables variable .

    $default  reduce using rule 8 (variables)


State 14

    1 function: function_header variables body .

    $default  reduce using rule 1 (function)


State 15

    7 parameter: IDENTIFIER ':' . type

    CHARACTER  shift, and go to state 37
    INTEGER    shift, and go to state 38
    REAL       shift, and go to state 39

    type  go to state 40


State 16

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS . type ';'

    CHARACTER  shift, and go to state 37
    INTEGER    shift, and go to state 38
    REAL       shift, and go to state 39

    type  go to state 41


State 17

    5 parameters: parameters ',' . parameter

    IDENTIFIER  shift, and go to state 7

    parameter  go to state 42


State 18

   10 variable: IDENTIFIER ':' . type IS statement_
   11         | IDENTIFIER ':' . LIST OF type IS list ';'

    CHARACTER  shift, and go to state 37
    INTEGER    shift, and go to state 38
    LIST       shift, and go to state 43
    REAL       shift, and go to state 39

    type  go to state 44


State 19

   20 statement_: error . ';'

    ';'  shift, and go to state 45


State 20

   59 primary: IDENTIFIER . '(' expression ')'
   60        | IDENTIFIER .

    '('  shift, and go to state 46

    $default  reduce using rule 60 (primary)


State 21

   56 primary: INT_LITERAL .

    $default  reduce using rule 56 (primary)


State 22

   57 primary: REAL_LITERAL .

    $default  reduce using rule 57 (primary)


State 23

   58 primary: CHAR_LITERAL .

    $default  reduce using rule 58 (primary)


State 24

   53 unary: NEGOP . unary

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    unary    go to state 47
    primary  go to state 36


State 25

   25 statement: FOLD . direction operator list_choice ENDFOLD

    LEFT   shift, and go to state 48
    RIGHT  shift, and go to state 49

    direction  go to state 50


State 26

   24 statement: IF . condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    condition      go to state 53
    or_condition   go to state 54
    and_condition  go to state 55
    not_condition  go to state 56
    relation       go to state 57
    expression     go to state 58
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 27

   23 statement: SWITCH . expression IS cases OTHERS ARROW statement_ ENDSWITCH

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 59
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 28

   22 statement: WHEN . condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    condition      go to state 60
    or_condition   go to state 54
    and_condition  go to state 55
    not_condition  go to state 56
    relation       go to state 57
    expression     go to state 58
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 29

   55 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 61
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 30

   18 body: BEGIN_ statement_ . END ';'

    END  shift, and go to state 62


State 31

   19 statement_: statement . ';'

    ';'  shift, and go to state 63


State 32

   21 statement: expression .
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64

    $default  reduce using rule 21 (statement)


State 33

   47 expression: term .
   48 term: term . MULOP power
   49     | term . MODOP power

    MULOP  shift, and go to state 65
    MODOP  shift, and go to state 66

    $default  reduce using rule 47 (expression)


State 34

   50 term: power .

    $default  reduce using rule 50 (term)


State 35

   51 power: unary . EXPOP power
   52      | unary .

    EXPOP  shift, and go to state 67

    $default  reduce using rule 52 (power)


State 36

   54 unary: primary .

    $default  reduce using rule 54 (unary)


State 37

   14 type: CHARACTER .

    $default  reduce using rule 14 (type)


State 38

   12 type: INTEGER .

    $default  reduce using rule 12 (type)


State 39

   13 type: REAL .

    $default  reduce using rule 13 (type)


State 40

    7 parameter: IDENTIFIER ':' type .

    $default  reduce using rule 7 (parameter)


State 41

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type . ';'

    ';'  shift, and go to state 68


State 42

    5 parameters: parameters ',' parameter .

    $default  reduce using rule 5 (parameters)


State 43

   11 variable: IDENTIFIER ':' LIST . OF type IS list ';'

    OF  shift, and go to state 69


State 44

   10 variable: IDENTIFIER ':' type . IS statement_

    IS  shift, and go to state 70


State 45

   20 statement_: error ';' .

    $default  reduce using rule 20 (statement_)


State 46

   59 primary: IDENTIFIER '(' . expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 71
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 47

   53 unary: NEGOP unary .

    $default  reduce using rule 53 (unary)


State 48

   31 direction: LEFT .

    $default  reduce using rule 31 (direction)


State 49

   32 direction: RIGHT .

    $default  reduce using rule 32 (direction)


State 50

   25 statement: FOLD direction . operator list_choice ENDFOLD

    ADDOP  shift, and go to state 72
    MULOP  shift, and go to state 73

    operator  go to state 74


State 51

   42 not_condition: NOTOP . not_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    not_condition  go to state 75
    relation       go to state 57
    expression     go to state 58
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 52

   44 relation: '(' . condition ')'
   55 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    condition      go to state 76
    or_condition   go to state 54
    and_condition  go to state 55
    not_condition  go to state 56
    relation       go to state 57
    expression     go to state 77
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 53

   24 statement: IF condition . THEN statement_ elsif_clauses ELSE statement_ ENDIF

    THEN  shift, and go to state 78


State 54

   37 condition: or_condition .
   38 or_condition: or_condition . OROP and_condition

    OROP  shift, and go to state 79

    $default  reduce using rule 37 (condition)


State 55

   39 or_condition: and_condition .
   40 and_condition: and_condition . ANDOP not_condition

    ANDOP  shift, and go to state 80

    $default  reduce using rule 39 (or_condition)


State 56

   41 and_condition: not_condition .

    $default  reduce using rule 41 (and_condition)


State 57

   43 not_condition: relation .

    $default  reduce using rule 43 (not_condition)


State 58

   45 relation: expression . RELOP expression
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64
    RELOP  shift, and go to state 81


State 59

   23 statement: SWITCH expression . IS cases OTHERS ARROW statement_ ENDSWITCH
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64
    IS     shift, and go to state 82


State 60

   22 statement: WHEN condition . ',' expression ':' expression

    ','  shift, and go to state 83


State 61

   46 expression: expression . ADDOP term
   55 primary: '(' expression . ')'

    ADDOP  shift, and go to state 64
    ')'    shift, and go to state 84


State 62

   18 body: BEGIN_ statement_ END . ';'

    ';'  shift, and go to state 85


State 63

   19 statement_: statement ';' .

    $default  reduce using rule 19 (statement_)


State 64

   46 expression: expression ADDOP . term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    term     go to state 86
    power    go to state 34
    unary    go to state 35
    primary  go to state 36


State 65

   48 term: term MULOP . power

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    power    go to state 87
    unary    go to state 35
    primary  go to state 36


State 66

   49 term: term MODOP . power

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    power    go to state 88
    unary    go to state 35
    primary  go to state 36


State 67

   51 power: unary EXPOP . power

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    power    go to state 89
    unary    go to state 35
    primary  go to state 36


State 68

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' .

    $default  reduce using rule 2 (function_header)


State 69

   11 variable: IDENTIFIER ':' LIST OF . type IS list ';'

    CHARACTER  shift, and go to state 37
    INTEGER    shift, and go to state 38
    REAL       shift, and go to state 39

    type  go to state 90


State 70

   10 variable: IDENTIFIER ':' type IS . statement_

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 91
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 71

   46 expression: expression . ADDOP term
   59 primary: IDENTIFIER '(' expression . ')'

    ADDOP  shift, and go to state 64
    ')'    shift, and go to state 92


State 72

   33 operator: ADDOP .

    $default  reduce using rule 33 (operator)


State 73

   34 operator: MULOP .

    $default  reduce using rule 34 (operator)


State 74

   25 statement: FOLD direction operator . list_choice ENDFOLD

    IDENTIFIER  shift, and go to state 93
    '('         shift, and go to state 94

    list         go to state 95
    list_choice  go to state 96


State 75

   42 not_condition: NOTOP not_condition .

    $default  reduce using rule 42 (not_condition)


State 76

   44 relation: '(' condition . ')'

    ')'  shift, and go to state 97


State 77

   45 relation: expression . RELOP expression
   46 expression: expression . ADDOP term
   55 primary: '(' expression . ')'

    ADDOP  shift, and go to state 64
    RELOP  shift, and go to state 81
    ')'    shift, and go to state 84


State 78

   24 statement: IF condition THEN . statement_ elsif_clauses ELSE statement_ ENDIF

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 98
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 79

   38 or_condition: or_condition OROP . and_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    and_condition  go to state 99
    not_condition  go to state 56
    relation       go to state 57
    expression     go to state 58
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 80

   40 and_condition: and_condition ANDOP . not_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    not_condition  go to state 100
    relation       go to state 57
    expression     go to state 58
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 81

   45 relation: expression RELOP . expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 101
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 82

   23 statement: SWITCH expression IS . cases OTHERS ARROW statement_ ENDSWITCH

    $default  reduce using rule 29 (cases)

    cases  go to state 102


State 83

   22 statement: WHEN condition ',' . expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 103
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 84

   55 primary: '(' expression ')' .

    $default  reduce using rule 55 (primary)


State 85

   18 body: BEGIN_ statement_ END ';' .

    $default  reduce using rule 18 (body)


State 86

   46 expression: expression ADDOP term .
   48 term: term . MULOP power
   49     | term . MODOP power

    MULOP  shift, and go to state 65
    MODOP  shift, and go to state 66

    $default  reduce using rule 46 (expression)


State 87

   48 term: term MULOP power .

    $default  reduce using rule 48 (term)


State 88

   49 term: term MODOP power .

    $default  reduce using rule 49 (term)


State 89

   51 power: unary EXPOP power .

    $default  reduce using rule 51 (power)


State 90

   11 variable: IDENTIFIER ':' LIST OF type . IS list ';'

    IS  shift, and go to state 104


State 91

   10 variable: IDENTIFIER ':' type IS statement_ .

    $default  reduce using rule 10 (variable)


State 92

   59 primary: IDENTIFIER '(' expression ')' .

    $default  reduce using rule 59 (primary)


State 93

   36 list_choice: IDENTIFIER .

    $default  reduce using rule 36 (list_choice)


State 94

   15 list: '(' . expressions ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expressions  go to state 105
    expression   go to state 106
    term         go to state 33
    power        go to state 34
    unary        go to state 35
    primary      go to state 36


State 95

   35 list_choice: list .

    $default  reduce using rule 35 (list_choice)


State 96

   25 statement: FOLD direction operator list_choice . ENDFOLD

    ENDFOLD  shift, and go to state 107


State 97

   44 relation: '(' condition ')' .

    $default  reduce using rule 44 (relation)


State 98

   24 statement: IF condition THEN statement_ . elsif_clauses ELSE statement_ ENDIF

    $default  reduce using rule 27 (elsif_clauses)

    elsif_clauses  go to state 108


State 99

   38 or_condition: or_condition OROP and_condition .
   40 and_condition: and_condition . ANDOP not_condition

    ANDOP  shift, and go to state 80

    $default  reduce using rule 38 (or_condition)


State 100

   40 and_condition: and_condition ANDOP not_condition .

    $default  reduce using rule 40 (and_condition)


State 101

   45 relation: expression RELOP expression .
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64

    $default  reduce using rule 45 (relation)


State 102

   23 statement: SWITCH expression IS cases . OTHERS ARROW statement_ ENDSWITCH
   28 cases: cases . case

    CASE    shift, and go to state 109
    OTHERS  shift, and go to state 110

    case  go to state 111


State 103

   22 statement: WHEN condition ',' expression . ':' expression
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64
    ':'    shift, and go to state 112


State 104

   11 variable: IDENTIFIER ':' LIST OF type IS . list ';'

    '('  shift, and go to state 94

    list  go to state 113


State 105

   15 list: '(' expressions . ')'
   16 expressions: expressions . ',' expression

    ','  shift, and go to state 114
    ')'  shift, and go to state 115


State 106

   17 expressions: expression .
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64

    $default  reduce using rule 17 (expressions)


State 107

   25 statement: FOLD direction operator list_choice ENDFOLD .

    $default  reduce using rule 25 (statement)


State 108

   24 statement: IF condition THEN statement_ elsif_clauses . ELSE statement_ ENDIF
   26 elsif_clauses: elsif_clauses . ELSIF condition THEN statement_

    ELSE   shift, and go to state 116
    ELSIF  shift, and go to state 117


State 109

   30 case: CASE . INT_LITERAL ARROW statement_

    INT_LITERAL  shift, and go to state 118


State 110

   23 statement: SWITCH expression IS cases OTHERS . ARROW statement_ ENDSWITCH

    ARROW  shift, and go to state 119


State 111

   28 cases: cases case .

    $default  reduce using rule 28 (cases)


State 112

   22 statement: WHEN condition ',' expression ':' . expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 120
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 113

   11 variable: IDENTIFIER ':' LIST OF type IS list . ';'

    ';'  shift, and go to state 121


State 114

   16 expressions: expressions ',' . expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 122
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 115

   15 list: '(' expressions ')' .

    $default  reduce using rule 15 (list)


State 116

   24 statement: IF condition THEN statement_ elsif_clauses ELSE . statement_ ENDIF

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 123
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 117

   26 elsif_clauses: elsif_clauses ELSIF . condition THEN statement_

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 51
    '('           shift, and go to state 52

    condition      go to state 124
    or_condition   go to state 54
    and_condition  go to state 55
    not_condition  go to state 56
    relation       go to state 57
    expression     go to state 58
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 118

   30 case: CASE INT_LITERAL . ARROW statement_

    ARROW  shift, and go to state 125


State 119

   23 statement: SWITCH expression IS cases OTHERS ARROW . statement_ ENDSWITCH

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 126
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 120

   22 statement: WHEN condition ',' expression ':' expression .
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64

    $default  reduce using rule 22 (statement)


State 121

   11 variable: IDENTIFIER ':' LIST OF type IS list ';' .

    $default  reduce using rule 11 (variable)


State 122

   16 expressions: expressions ',' expression .
   46 expression: expression . ADDOP term

    ADDOP  shift, and go to state 64

    $default  reduce using rule 16 (expressions)


State 123

   24 statement: IF condition THEN statement_ elsif_clauses ELSE statement_ . ENDIF

    ENDIF  shift, and go to state 127


State 124

   26 elsif_clauses: elsif_clauses ELSIF condition . THEN statement_

    THEN  shift, and go to state 128


State 125

   30 case: CASE INT_LITERAL ARROW . statement_

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 129
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 126

   23 statement: SWITCH expression IS cases OTHERS ARROW statement_ . ENDSWITCH

    ENDSWITCH  shift, and go to state 130


State 127

   24 statement: IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF .

    $default  reduce using rule 24 (statement)


State 128

   26 elsif_clauses: elsif_clauses ELSIF condition THEN . statement_

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 131
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 129

   30 case: CASE INT_LITERAL ARROW statement_ .

    $default  reduce using rule 30 (case)


State 130

   23 statement: SWITCH expression IS cases OTHERS ARROW statement_ ENDSWITCH .

    $default  reduce using rule 23 (statement)


State 131

   26 elsif_clauses: elsif_clauses ELSIF condition THEN statement_ .

    $default  reduce using rule 26 (elsif_clauses)
